website/versioned_docs/version-1.3.0/commands/Invoke-MtAzureRequest.mdx
---
sidebar_class_name: hidden
description: Invoke a REST API request to the Azure Management API.
id: Invoke-MtAzureRequest
title: Invoke-MtAzureRequest
hide_title: false
hide_table_of_contents: false
custom_edit_url: https://github.com/maester365/maester/blob/main/powershell/public/Invoke-MtAzureRequest.ps1
---

## SYNOPSIS

Invoke a REST API request to the Azure Management API.

## SYNTAX

```powershell
Invoke-MtAzureRequest [-RelativeUri] <String[]> [[-Method] <String>] [[-ApiVersion] <Object>]
 [[-Filter] <String>] [-ProgressAction <ActionPreference>] [<CommonParameters>]
```

## DESCRIPTION

This function allows you to make REST API requests to the Azure Management API.
It is a wrapper around the Invoke-AzRest function, providing a simplified interface.

## EXAMPLES

### EXAMPLE 1

```powershell
Invoke-MtAzureRequest -RelativeUri 'subscriptions'
```

## PARAMETERS

### -RelativeUri

Graph endpoint such as "users".

```yaml
Type: String[]
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Method

The HTTP method to use.
Default is GET.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 2
Default value: GET
Accept pipeline input: False
Accept wildcard characters: False
```

### -ApiVersion

The API version to use.
Default is 2024-11-01

```yaml
Type: Object
Parameter Sets: (All)
Aliases:

Required: False
Position: 3
Default value: 2024-11-01
Accept pipeline input: False
Accept wildcard characters: False
```

### -Filter

The filter to use.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 4
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -ProgressAction

\{\{ Fill ProgressAction Description \}\}

```yaml
Type: ActionPreference
Parameter Sets: (All)
Aliases: proga

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

## OUTPUTS

## NOTES

## RELATED LINKS

[https://maester.dev/docs/commands/Invoke-MtAzureRequest](https://maester.dev/docs/commands/Invoke-MtAzureRequest)
